--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -10,7 +10,11 @@
 Автор статьи никого ни к чему не призывает!
 Эта статья написана в образовательных целях.
 Не воспринимайте написанное здесь всерьез и не повторяйте за автором.
-1 {{&lt; ahtung/1 >}} Заголовки Следующие элементы HTML h2 - h6 представляют шесть уровней заголовков разделов....</p></div><footer class=entry-footer>nozsh</footer><a class=entry-link aria-label="post link to Typo" href=https://nozsh.su/blog/typo/></a></article></main><footer class=footer><span>&copy; 2024 <a href=https://nozsh.su/blog/>nozsh</a></span> ·
+1 {{&lt; ahtung/1 >}} Спойлер/Аккордион Заголовок
+Контент
+Заголовок
+Контент
+1 2 3 {{&lt; details/1 title="Заголовок" open=true >}} Контент {{&lt; /details/1 >}} Заголовки Следующие элементы HTML h2 - h6 представляют шесть уровней заголовков разделов....</p></div><footer class=entry-footer>nozsh</footer><a class=entry-link aria-label="post link to Typo" href=https://nozsh.su/blog/typo/></a></article></main><footer class=footer><span>&copy; 2024 <a href=https://nozsh.su/blog/>nozsh</a></span> ·
 <span>Powered by
 <a href=https://gohugo.io/ rel="noopener noreferrer" target=_blank>Hugo</a> &
         <a href=https://github.com/adityatelange/hugo-PaperMod/ rel=noopener target=_blank>PaperMod</a></span></footer><a href=#top aria-label="go to top" title="Go to Top (Alt + G)" class=top-link id=top-link accesskey=g><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 6" fill="currentcolor"><path d="M12 6H0l6-6z"/></svg>
